--- a/Projeto_01/1.musica_na_cidade.ipynb.ipynb
+++ b/Projeto_01/1.musica_na_cidade.ipynb.ipynb
@@ -74,33 +74,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "57eAOGIz_Zcs"
-   },
-   "source": [
-    "Você precisará de `pandas`, então, importe-a."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "AXN7PHPN_Zcs"
    },
    "outputs": [],
    "source": [
-    "# importando pandas\n",
+    "# Carregando todas as bibliotecas\n",
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "SG23P8tt_Zcs"
-   },
-   "source": [
-    "Leia o arquivo `music_project_en.csv` da pasta `/datasets/` e salve-o na variável `df`:"
    ]
   },
   {
@@ -202,15 +184,6 @@
     "# lendo o arquivo e armazenando em df\n",
     "df = pd.read_csv('/datasets/music_project_en.csv')\n",
     "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "rDoOMd3uTqnZ"
-   },
-   "source": [
-    "Exiba as primeiras 10 linhas da tabela:"
    ]
   },
   {
@@ -387,7 +360,7 @@
     }
    ],
    "source": [
-    "# obtenha as 10 primeiras 10 linhas da tabela df\n",
+    "# Exibindo as 10 primeiras linhas da tabela df\n",
     "df.head(10)"
    ]
   },
@@ -1207,27 +1180,18 @@
    },
    "outputs": [],
    "source": [
-    "# <criando a função number_tracks()>\n",
     "def number_tracks(day, city):\n",
-    "# vamos declarar a função com dois parâmetros: day=, city=.\n",
-    "# Deixe a variável track_list armazenar as linha df onde\n",
-    "# o valor na coluna 'day' é igual ao parâmetro day= e ao mesmo tempo,\n",
+    "    # Filtrar o DataFrame para incluir apenas as linhas onde o dia é igual a 'day'\n",
     "    track_list = df[df['day'] == day]\n",
-    "# o valor na coluna 'city' é igual ao parâmetro city= (aplique filtragem consecutiva \n",
-    "# com indexação lógica).\n",
-    "    track_list = track_list[track_list['city'] == city]\n",
-    "# Deixe a variável track_list_count armazenar o número de valores da coluna 'user_id' em track_list\n",
-    "# (encontre com o método count()).\n",
-    "    track_list_count = track_list['user_id'].count()\n",
-    "# Deixe a função retornar um número: o valor de track_list_count.\n",
-    "    return track_list_count\n",
     "\n",
-    "# A função conta músicas tocadas por uma certa cidade e dia.\n",
-    "# primeiro retorne as linhas com o dia pretendido da tabela,\n",
-    "# depois filtre as linhas com a cidade pretendida a parir do resultado,\n",
-    "# depois encontre o número de valores de 'user_id' na tabela filtrada,\n",
-    "# então retorne aquele número.\n",
-    "# Para o que ele retorna, envolva a função call em print()."
+    "    # Filtrar o DataFrame resultante para incluir apenas as linhas onde a cidade é igual a 'city'\n",
+    "    track_list = track_list[track_list['city'] == city]\n",
+    "\n",
+    "    # Contar o número de ocorrências de 'user_id' no DataFrame resultante\n",
+    "    track_list_count = track_list['user_id'].count()\n",
+    "\n",
+    "    # Retornar o número total de faixas para o dia e cidade específicos\n",
+    "    return track_list_count"
    ]
   },
   {
@@ -1891,46 +1855,26 @@
    },
    "outputs": [],
    "source": [
-    "# Declarando a função genre_weekday() com os parâmetros day=, time1=, e time2=. It should\n",
-    "# retornar a informação sobre os gêneros mais populares em um determinado dia em um período específico:\n",
-    "\n",
-    "# 1) Deixe a variável genre_df armazenar as linhas que satisfazem várias condições:\n",
-    "#    - o valor na coluna 'day' é igual ao valor do argumento day=\n",
-    "#    - o valor na coluna 'time' é maior do que o valor do argumento time1=\n",
-    "#    - o valor na coluna 'time' é menor do que o valor do argumento time2=\n",
-    "#    Use filtros consecutivos com indexação lógica.\n",
-    "\n",
-    "# 2) Agrupe genre_df pela coluna 'genre', pegue uma das suas colunas, \n",
-    "#    e use o método count() para encontrar a quantidade de entradas para entradas de cada um dos \n",
-    "#    representantes de gênero; armazene o objeto Series resultante na\n",
-    "#    variável genre_df_count\n",
-    "\n",
-    "# 3) Organize genre_df_count em ordem decrescente de frequência e armazene o resultado\n",
-    "#    para a variável genre_df_sorted\n",
-    "\n",
-    "# 4) Retorne um objeto Series com os primeiros 15 valores genre_df_sorted - os 15 maiores\n",
-    "#    generos populares (em um determinado dia, dentro de um certo intervalo de tempo)\n",
-    "\n",
-    "# Escreva a sua função aqui\n",
-    "\n",
-    "def genre_weekday(df,day, time1, time2):\n",
-    "    # filtragem consecutiva\n",
-    "    # genre_df armazenará apenas as linhas df onde o dia é igual a day=\n",
+    "def genre_weekday(df, day, time1, time2):\n",
+    "    # Filtragem consecutiva\n",
+    "    \n",
+    "    # Passo 1: Filtrar o DataFrame para incluir apenas as linhas onde o dia é igual a 'day'\n",
     "    genre_df = df[df['day'] == day]\n",
     "\n",
-    "    # genre_df armazenará apenas aslinhas df que o tempo é menor do que time2=\n",
+    "    # Passo 2: Filtrar o DataFrame resultante para incluir apenas as linhas onde o tempo é menor do que 'time2'\n",
     "    genre_df = genre_df[genre_df['time'] < time2]\n",
     "\n",
-    "    # genre_df armazenará apenas as linhas onde onde o tempo é maior do que time1=\n",
+    "    # Passo 3: Filtrar o DataFrame resultante para incluir apenas as linhas onde o tempo é maior do que 'time1'\n",
     "    genre_df = genre_df[genre_df['time'] > time1]\n",
     "\n",
-    "    # agrope o DataFrame filtrado pela coluna com nomes dos gêneros, pegue a coluna gênero, e encontre o número de linhas para cada gênero com o método count()\n",
+    "    # Agregar o DataFrame filtrado pela coluna com nomes dos gêneros\n",
+    "    # e contar o número de linhas para cada gênero com o método count()\n",
     "    genre_df_grouped = genre_df.groupby('genre')['user_id'].count()\n",
     "\n",
-    "    # nós vamos armazenar o resultado em ordem decrescente (para que os gêneros mais populares venham primeiro no objeto Series)\n",
+    "    # Ordenar o resultado em ordem decrescente para que os gêneros mais populares venham primeiro\n",
     "    genre_df_sorted = genre_df_grouped.sort_values(ascending=False)\n",
     "    \n",
-    "    # nós vamos retornar o objeto Serie armazenando os 15 gêneros mais populares em um determinado dia, dentro de um determinado intervalo de tempo\n",
+    "    # Retornar os 15 gêneros mais populares em um determinado dia, dentro de um determinado intervalo de tempo\n",
     "    return genre_df_sorted[:15]"
    ]
   },
@@ -2159,10 +2103,10 @@
    },
    "outputs": [],
    "source": [
-    "# em uma linha: agrupe a tabela spr_general pela coluna 'genre', \n",
-    "# conte os valores de 'genre' com count() no agrupamento, \n",
-    "# organize o o objeto Series resultante em ordem decrescente, e armazene-o em spr_genres\n",
+    "# Agrupar o DataFrame 'spr_general' pela coluna 'genre' e contar o número de ocorrências de cada gênero\n",
     "spr_general_counting = spr_general.groupby('genre')['genre'].count()\n",
+    "\n",
+    "# Ordenar o resultado em ordem decrescente para que os gêneros mais populares venham primeiro\n",
     "spr_genres = spr_general_counting.sort_values(ascending=False)"
    ]
   },
@@ -2228,10 +2172,10 @@
    },
    "outputs": [],
    "source": [
-    "# na linha um: agrupe a tabela shel_general pela coluna 'genre', \n",
-    "# conte os valores 'genre' no agrupamento com count(), \n",
-    "# organize a o objeto Series resultante em ordem decrescente e armazene-o em shel_genres\n",
+    "# Agrupar o DataFrame 'shel_general' pela coluna 'genre' e contar o número de ocorrências de cada gênero\n",
     "shel_general_counting = shel_general.groupby('genre')['genre'].count()\n",
+    "\n",
+    "# Ordenar o resultado em ordem decrescente para que os gêneros mais populares venham primeiro\n",
     "shel_genres = shel_general_counting.sort_values(ascending=False)"
    ]
   },
