--- a/Projeto_02/2.analise_do_risco_de_inadimplencia_dos_mutuários.ipynb
+++ b/Projeto_02/2.analise_do_risco_de_inadimplencia_dos_mutuários.ipynb
@@ -255,14 +255,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cc30a2ae-50ce-4bb1-8a4a-6a036607b0cb",
-   "metadata": {},
-   "source": [
-    "Exibindo as primeiras 10 linhas da tabela:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "eebbdea0-e005-4dd2-b391-85fb99d87e6b",
@@ -504,21 +496,13 @@
     }
    ],
    "source": [
-    "# obtenha as 10 primeiras 10 linhas da tabela df\n",
+    "# obtenha as 10 primeiras linhas da tabela df\n",
     "df.head(10)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d71288d3-dcab-4b79-abb6-f0532d754ea4",
-   "metadata": {},
-   "source": [
-    "Obtendo as informações gerais sobre a tabela com um comando:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ca52df41-3b64-4ea4-a635-61f65ddf993b",
    "metadata": {
     "tags": []
@@ -560,7 +544,7 @@
    "id": "c1d9d8e7-97a1-4e95-a010-e81692713fbc",
    "metadata": {},
    "source": [
-    "A tabela contém 12 colunas.Elas armazenam 3 tipos de dados diferentes: object, int64 e float.\n",
+    "A tabela contém 12 colunas. Elas armazenam 3 tipos de dados diferentes: object, int64 e float.\n",
     "\n",
     "- `children` - int64\n",
     "- `days_employed` - float64\n",
@@ -5122,14 +5106,6 @@
     "\n",
     "Neste projeto realizamos o pré-processamento de dados,em cada coluna realizamos a padronização de estilos, modificamos valores incongruentes, substituimos valores ausentes com base em estudos sobre outras colunas com valores devidamente preenchidos, removemos as duplicatas de valores existente na base de dados, fizemos pesquisa de quais fatores são mais determinantes para os usuários inadimplêntes e concluímos que fatores como: a quantidade de filhos, estado civil do cliente , a finalidade de crédito e o nível de renda são valores que impactam significativamente a inadimplência do clientes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c67ec670-353e-4c19-b687-fe492560dd1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
