--- a/Projeto_03/3.o_que_vende_um_carro.ipynb
+++ b/Projeto_03/3.o_que_vende_um_carro.ipynb
@@ -2539,6 +2539,7 @@
     }
    ],
    "source": [
+    "#Descrição sobre a colina 'price'\n",
     "df['price'].describe()"
    ]
   },
@@ -2817,12 +2818,13 @@
     }
    ],
    "source": [
+    "#filtrando em df todos os preços dos carros igual a 1 dolar.\n",
     "df.query(\"price == 1 \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "adaf7bf6-9fe7-44c8-a673-763265b32a6d",
    "metadata": {
     "tags": []
@@ -3095,6 +3097,7 @@
     }
    ],
    "source": [
+    "#filtrando em df todos os preços dos carros inferiores a 200 dolares em ordem decrescente\n",
     "df.query(\"price < 200 \").sort_values(by='price',ascending=False)"
    ]
   },
@@ -3130,7 +3133,10 @@
     }
    ],
    "source": [
-    "df_median_price = df.groupby(['model','model_year','condition'])['price'].median()\n",
+    "# Agrupar o DataFrame 'df' pelas colunas 'model', 'model_year' e 'condition', e calcular a mediana dos preços\n",
+    "df_median_price = df.groupby(['model', 'model_year', 'condition'])['price'].median()\n",
+    "\n",
+    "# Retornar o DataFrame contendo a mediana dos preços agrupados por modelo, ano do modelo e condição\n",
     "df_median_price"
    ]
   },
@@ -3143,9 +3149,13 @@
    },
    "outputs": [],
    "source": [
+    "# Função para determinar se o preço precisa ser substituído pela mediana dos preços.\n",
     "def fill_price(row):\n",
-    "    if row['price'] <  200 :\n",
+    "    # Verificar se o preço na linha é menor que 200\n",
+    "    if row['price'] < 200:\n",
+    "        # Se for menor que 200, retornar a mediana dos preços correspondente ao preço na linha\n",
     "        return df_median_price[row['price']]\n",
+    "    # Se não for menor que 200, manter o preço original da linha\n",
     "    return row['price']"
    ]
   },
@@ -3158,6 +3168,7 @@
    },
    "outputs": [],
    "source": [
+    "# Aplicando a função\n",
     "df['price'] = df.apply(fill_price, axis=1)"
    ]
   },
@@ -3262,7 +3273,8 @@
     }
    ],
    "source": [
-    "df.query('price > 189000 ')"
+    "# Filtrar o DataFrame 'df' para incluir apenas as linhas onde o preço é maior que 189.000\n",
+    "df.query('price > 189000')"
    ]
   },
   {
@@ -3552,13 +3564,15 @@
     }
    ],
    "source": [
-    "df= df[df['price']> 200].reset_index()\n",
+    "# Filtrar o DataFrame 'df' para incluir apenas as linhas onde o preço é maior que 200\n",
+    "# Em seguida, redefinir os índices do DataFrame resultante\n",
+    "df = df[df['price'] > 200].reset_index(drop=True)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "95540405-883d-4cb4-956f-8795b5cfbd52",
    "metadata": {
     "tags": []
@@ -3698,6 +3712,7 @@
     }
    ],
    "source": [
+    "# Conferindo as estatísticas descritivas para as colunas numéricas do DataFrame 'df'\n",
     "df.describe()"
    ]
   },
@@ -3768,6 +3783,8 @@
     }
    ],
    "source": [
+    "\n",
+    "# Conferindo as ocorrências das variáveis categóricas\n",
     "df['model'].value_counts().sort_values(ascending=False)"
    ]
   },
@@ -4175,7 +4192,7 @@
    },
    "outputs": [],
    "source": [
-    "# Adicione a idade do veículo quando a propaganda for colocada\n",
+    "# Adicionando a idade do veículo quando a propaganda for colocada\n",
     "df['age'] = (df['date_posted'].dt.year) - (df['model_year'])"
    ]
   },
@@ -4188,6 +4205,7 @@
    },
    "outputs": [],
    "source": [
+    "# Conventendo os valores da coluna para inteiro\n",
     "df['odometer'] = df['odometer'].astype('int')"
    ]
   },
@@ -4200,6 +4218,7 @@
    },
    "outputs": [],
    "source": [
+    "# Conventendo os valores da coluna para inteiro\n",
     "df['age'] = df['age'].astype('int')"
    ]
   },
@@ -4225,6 +4244,7 @@
    },
    "outputs": [],
    "source": [
+    "# Conventendo os valores da coluna para inteiro\n",
     "df['age_km'] = df['age_km'].astype('int')"
    ]
   },
@@ -4268,22 +4288,21 @@
    },
    "outputs": [],
    "source": [
-    "# Isso deve ajudar a substituir os valores condicionais por alguma coisa que pode ser manipulada mais facilmente\n",
+    "# Substituindo os valores categóricos de condição por valores numéricos\n",
     "\n",
     "def fill_condition(row):\n",
     "    if row['condition'] == 'new':\n",
     "        return 5  # Veículo novo\n",
-    "    if row['condition'] == 'like new':\n",
-    "        return 4 # Veículo igual a novo\n",
-    "    if row['condition'] == 'excellent':\n",
-    "        return 3 # Veículo excelente\n",
-    "    if row['condition'] == 'good':\n",
-    "        return 2 # Veículo bom\n",
-    "    if row['condition'] == 'fair':\n",
-    "        return 1 # Veículo razoável\n",
-    "    if row['condition'] == 'salvage':\n",
-    "        return 0 # Sucata\n",
-    "   "
+    "    elif row['condition'] == 'like new':\n",
+    "        return 4  # Veículo em excelente estado\n",
+    "    elif row['condition'] == 'excellent':\n",
+    "        return 3  # Veículo em ótimo estado\n",
+    "    elif row['condition'] == 'good':\n",
+    "        return 2  # Veículo em bom estado\n",
+    "    elif row['condition'] == 'fair':\n",
+    "        return 1  # Veículo em estado regular\n",
+    "    elif row['condition'] == 'salvage':\n",
+    "        return 0  # Veículo em estado de sucata"
    ]
   },
   {
@@ -4295,6 +4314,7 @@
    },
    "outputs": [],
    "source": [
+    "# Aplicando a função\n",
     "df['condition'] = df.apply(fill_condition, axis=1)"
    ]
   },
@@ -5472,14 +5492,6 @@
     "\n",
     "Com base na Análise exploratória de dados,concluimos que diversos fatores influênciam no preço, como: o ano, já que carros mais novos custam mais. A condição do veículo indicam que quanto mais conservado ou novo, o preço tende a ser maior. A kilometragem, carros que tem menos kilometragem tendem a ser mais caros. Os tipos mais comum que são sedan e SUV. Em média Carros SUV sua transmissão manueal normalmente é mais cara, porem o sedan, a transmissão automatica é mais cara, já a cor depende uma questão de gosto, pois tem suas médias de preço bem parecidas."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec02c168-eadb-4bd4-8a4e-f80bb50675a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
